language/move-lang/tests/move_check/translated_ir_tests/commands/join_failure.exp
error: 

    ┌── tests/move_check/translated_ir_tests/commands/join_failure.move:13:21 ───
    │
 13 │         R{ f: _ } = move r;
    │                     ^^^^^^ Invalid usage of local 'r'
    ·
  8 │             R{ f } = move r;
    │                      ------ The local might not have a value due to this position. The local must be assigned a value before being used
    │

